[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/menu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/times new roman.ttf"

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = SubResource( 2 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="VBoxbotones" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 450.0
margin_right = 500.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newgame" type="Button" parent="VBoxbotones"]
margin_right = 450.0
margin_bottom = 43.0
custom_colors/font_color_focus = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_colors/font_color = Color( 0.768627, 0.756863, 0.819608, 1 )
custom_colors/font_color_pressed = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Game"

[node name="option" type="Button" parent="VBoxbotones"]
margin_top = 47.0
margin_right = 450.0
margin_bottom = 90.0
custom_colors/font_color_focus = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_colors/font_color = Color( 0.792157, 0.780392, 0.843137, 1 )
custom_colors/font_color_pressed = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Option"

[node name="quit" type="Button" parent="VBoxbotones"]
margin_top = 94.0
margin_right = 450.0
margin_bottom = 137.0
custom_colors/font_color_focus = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_colors/font_color = Color( 0.792157, 0.780392, 0.843137, 1 )
custom_colors/font_color_pressed = Color( 0.913725, 0.176471, 0.176471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="VBoxbotones/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="VBoxbotones/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxbotones/quit" to="." method="_on_quit_pressed"]
